--- a/src/app/modules/admin/components/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.html
@@ -1,1 +1,7 @@
-<p>dashboard works!</p>
+<nav>
+  <a routerLink="course">Lam BUoi</a>
+  <a routerLink="user">Lam users</a>
+</nav>
+<main>
+  <router-outlet></router-outlet>
+</main>
