--- a/src/app/modules/admin/components/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <nav>
-  <a routerLink="course">Lam BUoi</a>
-  <a routerLink="user">Lam users</a>
+  <a routerLink="course">Manager course</a>
+  <a routerLink="user">Manager users</a>
 </nav>
 <main>
   <router-outlet></router-outlet>
