--- a/src/app/modules/admin/components/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.html
@@ -1,6 +1,9 @@
 <nav>
-  <a routerLink="course">Manager course</a>
-  <a routerLink="user">Manager users</a>
+
+  <div class="menu-link">
+    <a routerLink="course">Manager course</a>
+    <a routerLink="user">Manager users</a>
+  </div>
 </nav>
 <main>
   <router-outlet></router-outlet>
