--- a/src/app/modules/admin/components/courses-manager/course-manager.component.html
+++ b/src/app/modules/admin/components/courses-manager/course-manager.component.html
@@ -1,1 +1,35 @@
-<p>admin-course works!</p>
+<div class="course-admin">
+  <div class="title">
+    <h2>Manager Courses</h2>
+  </div>
+  <div class="content">
+    <div class="table">
+<!--      <dx-data-grid id="gridContainer"-->
+<!--                    [dataSource]="dataSource"-->
+<!--                    [showBorders]="true">-->
+<!--        <dxi-column-->
+<!--          dataField="OrderNumber"-->
+<!--          dataType="number">-->
+<!--        </dxi-column>-->
+<!--        <dxi-column-->
+<!--          dataField="OrderDate"-->
+<!--          dataType="date">-->
+<!--        </dxi-column>-->
+<!--        <dxi-column-->
+<!--          dataField="StoreCity"-->
+<!--          dataType="string">-->
+<!--        </dxi-column>-->
+<!--        <dxi-column-->
+<!--          dataField="StoreState"-->
+<!--          dataType="string">-->
+<!--        </dxi-column>-->
+<!--        <dxo-paging [pageSize]="12"></dxo-paging>-->
+<!--        <dxo-pager-->
+<!--          [showPageSizeSelector]="true"-->
+<!--          [allowedPageSizes]="[5, 10, 15]"-->
+<!--        ></dxo-pager>-->
+<!--      </dx-data-grid>-->
+    </div>
+  </div>
+</div>
+
