--- a/src/app/modules/admin/components/dashboard/dashboard.component.scss
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.scss
@@ -1,3 +1,17 @@
 ::ng-deep app-dashboard {
   display: flex;
+
+  nav {
+    min-width: 200px;
+    max-width: 300px;
+
+    .menu-link {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+
+  main {
+
+  }
 }
