--- a/src/app/modules/admin/components/courses-manager/course-manager.component.html
+++ b/src/app/modules/admin/components/courses-manager/course-manager.component.html
@@ -4,31 +4,20 @@
   </div>
   <div class="content">
     <div class="table">
-<!--      <dx-data-grid id="gridContainer"-->
-<!--                    [dataSource]="dataSource"-->
-<!--                    [showBorders]="true">-->
-<!--        <dxi-column-->
-<!--          dataField="OrderNumber"-->
-<!--          dataType="number">-->
-<!--        </dxi-column>-->
-<!--        <dxi-column-->
-<!--          dataField="OrderDate"-->
-<!--          dataType="date">-->
-<!--        </dxi-column>-->
-<!--        <dxi-column-->
-<!--          dataField="StoreCity"-->
-<!--          dataType="string">-->
-<!--        </dxi-column>-->
-<!--        <dxi-column-->
-<!--          dataField="StoreState"-->
-<!--          dataType="string">-->
-<!--        </dxi-column>-->
-<!--        <dxo-paging [pageSize]="12"></dxo-paging>-->
-<!--        <dxo-pager-->
-<!--          [showPageSizeSelector]="true"-->
-<!--          [allowedPageSizes]="[5, 10, 15]"-->
-<!--        ></dxo-pager>-->
-<!--      </dx-data-grid>-->
+      <dx-data-grid id="gridContainer"
+                    [dataSource]="dataSource"
+                    [showBorders]="true"
+                    [remoteOperations]="false"
+                    mode="row">
+        <dxo-editing
+          [allowAdding]="true"
+          [allowUpdating]="true"
+          [allowDeleting]="true"
+          mode="row"> <!-- 'batch' | 'cell' | 'form' | 'popup' -->
+        </dxo-editing>
+        <dxi-column dataField="id" width="75"></dxi-column>
+        <dxi-column dataField="code"></dxi-column>
+      </dx-data-grid>
     </div>
   </div>
 </div>
