--- a/src/app/modules/user/components/course-card/course-card.component.html
+++ b/src/app/modules/user/components/course-card/course-card.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="!!isDisplay">
-  <app-toastr [textContentNotify]="senderName + ' want to fight you'" (option)="onSelectOption($event)"></app-toastr>
+  <app-toastr [textContentNotify]="senderCompetitor.userName + ' want to fight you'" (option)="onSelectOption($event)"></app-toastr>
 </ng-container>
 <div class="course-container">
   <div class="space"></div>
