--- a/src/app/modules/admin/components/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.html
@@ -1,10 +1,11 @@
-<nav>
-
-  <div class="menu-link">
-    <a routerLink="course">Manager course</a>
-    <a routerLink="user">Manager users</a>
-  </div>
-</nav>
-<main>
-  <router-outlet></router-outlet>
-</main>
+<div class="container dashboard-admin">
+  <nav>
+    <div class="menu-link">
+      <a routerLink="course">Manager course</a>
+      <a routerLink="user">Manager users</a>
+    </div>
+  </nav>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+</div>
