--- a/src/app/modules/user/components/competition/competition.component.html
+++ b/src/app/modules/user/components/competition/competition.component.html
@@ -6,9 +6,9 @@
 <!--          <img src="">-->
           <i class="fal fa-user"></i>
         </div>
-        <div class="mt-2">{{this.myInfo?.userName}}</div>
+        <div class="mt-2">{{roomData?.userA?.userName}}</div>
         <div>
-          <span>{{this.myInfo?.resultCorrect}}</span>/<span>{{this.numberQuestion}}</span>
+          <span>{{roomData?.userA?.resultCorrect}}</span>/<span>{{roomData?.totalWords}}</span>
         </div>
       </div>
       <div class="timer-count-down">
@@ -19,9 +19,9 @@
 <!--          <img src="">-->
           <i class="fal fa-user"></i>
         </div>
-        <div class="mt-2">{{competitor.userName}}</div>
+        <div class="mt-2">{{roomData?.userB?.userName}}</div>
         <div>
-          <span>{{this.competitor?.resultCorrect}}</span>/<span>{{this.numberQuestion}}</span>
+          <span>{{roomData?.userB?.resultCorrect}}</span>/<span>{{roomData?.totalWords}}</span>
         </div>
       </div>
     </div>
@@ -30,7 +30,7 @@
     <ng-container *ngIf="!!word">
       <app-choose-word-type
         [word]="word"
-        [wordList]="words"
+        [wordList]="roomData.words"
         (callBackChooseNextWordHandel)="callBackNextWordHandel($event)"
       ></app-choose-word-type>
     </ng-container>
