--- a/src/app/modules/user/components/rank/rank.component.html
+++ b/src/app/modules/user/components/rank/rank.component.html
@@ -1,4 +1,3 @@
-<p>rank works!</p>
 <div class="ranking__wrap">
   <div class="title">
     Ranking
@@ -7,7 +6,7 @@
     <table class="table">
       <thead class="thead-light">
       <tr>
-        <th scope="col">Rnk</th>
+        <th scope="col">Order</th>
         <th scope="col">Full name</th>
         <th scope="col">Score</th>
       </tr>
