--- a/src/app/theme/layouts/default-layout/default-layout.component.html
+++ b/src/app/theme/layouts/default-layout/default-layout.component.html
@@ -1,5 +1,5 @@
 <div>
   <router-outlet></router-outlet>
 </div>
-<div style="padding-bottom: 55px;" class="space-top">
-</div>
+<!--<div style="padding-bottom: 55px;" class="space-top">-->
+<!--</div>-->
