--- a/src/app/modules/admin/components/dashboard/dashboard.component.scss
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.scss
@@ -2,13 +2,47 @@
   .dashboard-admin {
     display: flex;
 
-    nav {
-      min-width: 200px;
-      max-width: 300px;
+    .navbar-wrap {
+      background-color: #FFF;
+      margin-left: 200px;
+    }
 
-      .menu-link {
-        display: flex;
-        flex-direction: column;
+    .msb {
+      min-width: 250px;
+      min-height: calc(100vh);
+      height: 100%;
+      z-index: 1;
+      border-right: 1px solid #ddd;
+      background-color: #F5F7F9;
+      margin-right: 30px;
+
+      .navbar {
+        border: none;
+        margin-left: 0;
+        background-color: inherit;
+      }
+
+      .navbar-header {
+        width: 100%;
+        border-bottom: 1px solid #e7e7e7;
+        margin-bottom: 10px;
+        background: #fff;
+      }
+
+      .navbar-nav {
+        li {
+          display: block;
+          width: 100%;
+
+          a {
+            padding:0 15px;
+            color: #5f5f5f;
+
+            .fas {
+              margin-right: 8px;
+            }
+          }
+        }
       }
     }
 
