--- a/src/app/modules/user/components/course-card/course-card.component.html
+++ b/src/app/modules/user/components/course-card/course-card.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="!!isDisplay">
   <app-toastr [textContentNotify]="senderCompetitor.userName + ' want to fight you'" (option)="onSelectOption($event)"></app-toastr>
 </ng-container>
-<div class="course-container">
+<div *ngIf="!isWaitLoad" class="course-container">
   <div class="space"></div>
   <div class="wrap-course-content">
     <app-rank></app-rank>
@@ -72,8 +72,10 @@
     </div>
   </div>
 </div>
-<ng-template #loading>
-  <div class="spinner-border" role="status">
-    <span class="sr-only">Loading...</span>
-  </div>
-</ng-template>
+<dx-load-panel *ngIf="isWaitLoad"
+               [visible]="true"
+               shadingColor="#ffffffcc"
+               [showIndicator]="true"
+               [shading]="false"
+               [showPane]="false">
+</dx-load-panel>
