--- a/src/app/modules/user/components/home/home.component.scss
+++ b/src/app/modules/user/components/home/home.component.scss
@@ -11,6 +11,7 @@
     justify-content: center;
 
     .course-item {
+      cursor: pointer;
       box-shadow: 0px 0px 5px 0px rgb(0 0 0 / 43%);
       border-radius: 10px;
       padding: 10px;
