--- a/src/app/modules/user/components/course-card/course-card.component.html
+++ b/src/app/modules/user/components/course-card/course-card.component.html
@@ -5,7 +5,7 @@
   <div class="space"></div>
   <div class="wrap-course-content">
     <app-rank></app-rank>
-    <div class="wrap-mid-content" *ngIf="courseCard.length>0; else loading">
+    <div class="wrap-mid-content">
       <div class="wrap-course-item">
           <button (click)="isCreatCourse = true " class="btn btn-add-course btn-primary">create course</button>
           <div class="space"></div>
