--- a/src/app/theme/layouts/header/header.component.html
+++ b/src/app/theme/layouts/header/header.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <a class="nav-item  nav-link" routerLink="/explore">Explore</a>
-        <a class="nav-item active nav-link" routerLink="/course">My courses</a>
+        <a class="nav-item  nav-link" routerLink="/course">My courses</a>
         <a class="nav-item nav-link" routerLink="/admin" *ngIf="isAdmin">Admin</a>
 
       </ul>
