--- a/src/app/modules/admin/components/dashboard/dashboard.component.scss
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.scss
@@ -1,4 +1,5 @@
 ::ng-deep app-dashboard {
+  font-family: 'Itim', cursive;
   .dashboard-admin {
     display: flex;
 
@@ -6,14 +7,13 @@
       background-color: #FFF;
       margin-left: 200px;
     }
-
     .msb {
       min-width: 250px;
       min-height: calc(100vh);
       height: 100%;
       z-index: 1;
       border-right: 1px solid #ddd;
-      background-color: #F5F7F9;
+      background-color: #3b9dff;
       margin-right: 30px;
 
       .navbar {
@@ -27,16 +27,24 @@
         border-bottom: 1px solid #e7e7e7;
         margin-bottom: 10px;
         background: #fff;
+        border-radius: 10px;
+       display: flex;
+       justify-content: center;
       }
 
       .navbar-nav {
         li {
           display: block;
           width: 100%;
-
+          margin-top: 20px;
           a {
             padding:0 15px;
-            color: #5f5f5f;
+            color: #020202;
+            &:hover{
+              text-decoration: none;
+              font-weight: bold;
+              color: white;
+            }
 
             .fas {
               margin-right: 8px;
